--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,15 @@
 .env
 .env.backup
 .env.production
+.env.staging
+.env.local
+.env.development
+.env.testing
+.env.dusk
+.env.*.php
 .phpactor.json
 .phpunit.result.cache
+.php-cs-fixer.cache
 /.fleet
 /.idea
 /.nova
@@ -13,12 +20,40 @@
 /.zed
 /auth.json
 /node_modules
+/npm-debug.log
+/yarn-error.log
+*.tsbuildinfo
+.vite
 /public/build
 /public/hot
 /public/storage
 /storage/*.key
-/storage/pail
+/storage/app/public/*
+!storage/app/public/.gitkeep
+/storage/framework/*
+!storage/framework/.gitkeep
+/storage/logs/*
+!storage/logs/.gitkeep
 /vendor
 Homestead.json
 Homestead.yaml
 Thumbs.db
+desktop.ini
+*.swp
+*.swo
+*~
+*.bak
+*.backup
+composer.phar
+*.key
+*.pem
+*.crt
+*.csr
+.cache
+*.cache
+.tmp
+.temp
+Dockerfile.prod
+docker-compose.deploy.yml
+DEPLOYMENT.md
+README.Docker.md
